added post and put end point structure
